syntax = "proto3";
package communication;

// ===== PARSERS =====
message ParseRequest {
    string file_path = 1;
}

message ParseDetails {
    uint32 line_number = 1;
    string whole_line = 2;
}

enum ParsedType {
    Function = 0;
    Variable = 1;
    Struct   = 2;
}

message ParseContent {
    ParsedType parsed_type = 1;
    string content = 2;
    repeated string tokens = 3;
}

message ParseResponse {
    string file_path = 1;
    repeated ParseContent content = 2;
}

service Parser {
    rpc Parse(ParseRequest) returns (ParseResponse);
}

enum ParserType {
    RUST = 0;
    GOLANG = 1;
}

// ===== REGISTRY =====
message RegisterRequest {
    string host = 1;
    string port = 2;
    ParserType p_type = 3;
}

message RegisterResponse {
    string response = 1;
}

service Register {
    rpc Register(RegisterRequest) returns (RegisterResponse);
}

enum CliType {
    SEARCH = 0; 
}

// ===== CLI =====
message CliRequest {
    CliType c_type = 1;
    string content = 2;
}

message CliResponse {
    string response = 1;
}

service Cli {
    rpc Command(CliRequest) returns (CliResponse);
}